# Astra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  serve_docs.py  zensical.toml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml  release-check.yml
docs/: RFC.md  gen_ref_pages.py  index.md  medium_introducing_astra.md
docs/about/: architecture.md  architecture_and_workflows.md  changelog.md  contributing.md  license.md  package-summary.md  package_detailed_references.md  security.md  status.md
docs/api/: adapters.md  admin-ui.md  cli.md  core.md  idp.md  plugins.md  policy.md  service.md  tenancy.md  webauthn.md
docs/examples/: bootstrap-runtime.md  index.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/stylesheets/: extra.css
docs/user-guide/: abuse-controls.md  authentication.md  authorization.md  mfa.md  multi-tenancy.md  oidc-federation.md  plugins.md  rebac-policies.md
examples/: 01_bootstrap_runtime.py  02_password_email_otp_step_up.py  03_oidc_federation.py  04_hybrid_authorization.py  05_asgi_app.py  06_flask_app.py  07_config_reload.py  08_flask_deployment.py  09_django_deployment.py  10_admin_web_ui.py  11_fastapi_e2e_app.py  12_litestar_app.py  13_robyn_app.py  14_encrypted_bootstrap_export.py  15_plugin_trust_policy.py  16_webauthn_production_verifier.py  17_event_bus_zeromq.py  18_event_bus_inmemory_redis.py  19_rebac_policy_tenancy.py  README.md  _support.py  astra_demo.py  django_app.py  fastapi_app.py  flask_app.py  litestar_app.py  robyn_app.py
src/astraauth/: __init__.py  __main__.py
src/astraauth/adapters/: __init__.py  base.py  extensions.py  origin.py
src/astraauth/adapters/asgi/: wiring.py
src/astraauth/adapters/django/: __init__.py  wiring.py
src/astraauth/adapters/fastapi/: wiring.py
src/astraauth/adapters/flask/: wiring.py
src/astraauth/adapters/litestar/: wiring.py
src/astraauth/adapters/robyn/: wiring.py
src/astraauth/core/: ids.py  version.py
src/astraauth/core/adapters/: __init__.py  base.py  http_types.py  oauth_http.py  security_headers.py
src/astraauth/core/authorization/: decorators.py  engine.py  exceptions.py  scope_policy.py  store.py
src/astraauth/core/config/: __init__.py  settings.py
src/astraauth/core/events/: __init__.py  base.py  inmemory.py  redis_pubsub.py  zeromq_pubsub.py
src/astraauth/core/mfa/: __init__.py  models.py  services.py  sql_store.py  store.py
src/astraauth/core/oauth/: __init__.py  api_key.py  client_auth.py  errors.py  inmemory.py  models.py  oidc.py  password.py  pkce.py  services.py
src/astraauth/core/persistence/: __init__.py  relational.py
src/astraauth/core/plugins/: __init__.py  registry.py
src/astraauth/core/repositories/: __init__.py  authorization.py  mfa.py  oauth.py  plugins.py  sessions.py
src/astraauth/core/security/: __init__.py  throttling.py
src/astraauth/core/sessions/: __init__.py  introspection.py  models.py  redis_store.py  services.py  sql_store.py  store.py
src/astraauth/core/token/: store.py  token_manager.py
src/astraauth/idp/: __init__.py  models.py  services.py  sql_store.py  store.py
src/astraauth/plugins/: __init__.py  contracts.py  runtime.py
src/astraauth/service/: __init__.py  factory.py  observability.py  redaction.py  startup.py
src/astraauth/webauthn/: __init__.py  models.py  services.py  sql_store.py  store.py
tests/: conftest.py  test_authorization_hybrid_contracts.py  test_config_settings.py  test_contracts_phase5.py  test_django_phase7.py  test_endpoint_mount_phase4.py  test_examples_phase7.py  test_factory.py  test_flask_asgi_phase7.py  test_hardening_contracts_phase0_3.py  test_mfa_email_phase5.py  test_mfa_integration.py  test_mfa_phase5_step1.py  test_mfa_sql_phase5.py  test_mfa_totp_phase5_step2.py  test_mysql_integration.py  test_oauth_grants_phase1.py  test_oauth_mount_phase5.py  test_oidc_integration.py  test_oidc_jwks_validation.py  test_oidc_mount_phase6.py  test_oidc_phase6_step1.py  test_oidc_provider_confidence.py  test_origin_policy_phase5.py  test_plugin_hook_integration.py  test_plugin_registry_store_phase4.py  test_plugin_runtime_phase4.py  test_policy_engine.py  test_postgres_integration.py  test_relational_async.py  test_repository_unification.py  test_sessions_stores_events_phase2.py  test_tenancy_middleware.py  test_throttling_store.py
